--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
    
 
     
-    <link rel="canonical" href="/portfolio" />
+    <link rel="canonical" href="https://alt-school-exam-project-zeta.vercel.app/portfolio/" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
